--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsive Design Example</title>
+    <link rel="stylesheet" href="hidaya_hub_rangi.css">
+</head>
+<body>
+    <header class="header">Header</header>
+    <nav class="nav">Navigation</nav>
+    <main class="main">Main Content</main>
+    <aside class="aside">Sidebar</aside>
+    <footer class="footer">Footer</footer>
+</body>
+</html>
+
+<!--!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Font Awesome for social media icons -->
+    <!-- Font Awesome for social media icons -
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="hidaya_hub_book_home.html">
     <link rel="stylesheet" type="text/css" href="hidaya_hub_rangi.css">
@@ -13,7 +30,7 @@
 <body>
     
 <div class="navbar">
-    <!--img src="logo_kupima.jpg" alt="Logo" width="100" height="100">-->
+    <!--img src="logo_kupima.jpg" alt="Logo" width="100" height="100">--
     <h1 style="color: white;"><a href="#"> HIDAYA_HUB</a></h1>
     <div class="menu-icon" onclick="toggleMenu(10.10)">☰</div>
     <div class="menu">  
@@ -40,7 +57,7 @@
 </div>
     <main>
         <!--h1>Welcome to My Website</h1>
-        <p>Karibuni Sana Kwenye Channel yetu pendwa .</p>-->
+        <p>Karibuni Sana Kwenye Channel yetu pendwa .</p>--
         <p><img src="jinala_mungu.jpg" alt="Description of image 1" class="animated-image"></p>
     </main>
 <div class="main-content">
@@ -64,7 +81,7 @@
             <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
             <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-        </div>
+        </div>-->
     </footer>
 
 </body>
